# pywhlobf

./: .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  README_zh.md  setup.cfg
.github/workflows/: dockerfile.yml  main.yml
dockerfile/: Dockerfile  entrypoint.sh  install.sh
pywhlobf/: build.py  cli.py  post.py  prep.py
pywhlobf/asset/: obfuscate_sizeof.h
