[metadata]
name = pywhlobf
version = 0.1.0
author = Hunt Zhan
author_email = huntzhan.dev@gmail.com
description = todo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/huntzhan/pywhlobf
license = MIT

[options]
packages = find:
python_requires = ~=3.8
install_requires =
    Cython ~= 0.29.21
    iolite >= 0.3.0

[options.extras_require]
dev =
    build >= 0.2.1
    fireball >= 0.5.0
    pytest >= 6.1.2
    yapf >= 0.30.0
    flake8 >= 3.8.4
    pdoc3 >= 0.9.2
    twine >= 3.2.0
    ipython >= 7.20.0
    pdbpp >= 0.10.2
    rope >= 0.18.0

# Code linting.
[flake8]
max-line-length = 100

ignore =
    # From AllenNLP
    # these rules don't play well with black
    E203  # whitespace before :
    W503  # line break before binary operator

    # From Yapf
    # indentation is not a multiple of four,
    E111
    E114
    # visually indented line with same indent as next logical line,
    E129

exclude =
    build/**
    dist/**
    data/**
    doc/**

per-file-ignores =
    # __init__.py files are allowed to have unused imports and lines-too-long
    */__init__.py:F401
    */**/**/__init__.py:F401,E501

    # tests don't have to respect
    #  E731: do not assign a lambda expression, use a def
    tests/**:E731

    # scripts don't have to respect
    #  E402: imports not at top of file (because we mess with sys.path)
    scripts/**:E402

# Code formatting.
[yapf]
based_on_style = google
column_limit = 100
dedent_closing_brackets = true
coalesce_brackets = true
split_before_bitwise_operator = true
split_before_arithmetic_operator = true
split_before_logical_operator = true
